--- a/Dockercontainer/Dockerfile
+++ b/Dockercontainer/Dockerfile
@@ -1,16 +1,9 @@
 FROM python:3.6
 
-ENV SCANCODE_RELEASE=3.1.1
-
-RUN apt-get update && apt-get install bzip2 xz-utils zlib1g libxml2-dev libxslt1-dev
-
-ADD "https://github.com/nexB/scancode-toolkit/releases/download/v${SCANCODE_RELEASE}/scancode-toolkit-${SCANCODE_RELEASE}.tar.bz2" .
- 
-RUN mkdir scancode-toolkit && tar xjvf scancode-toolkit-*.tar.bz2 -C scancode-toolkit --strip-components=1
-
+RUN pip install scancode-toolkit && mkdir scancode-toolkit
 WORKDIR scancode-toolkit
 
-RUN ./scancode --help 
+RUN scancode --help 
 
 ENV PATH=$HOME/scancode-toolkit:$PATH
 ADD ./amd-plugin.sh /scancode-toolkit/
@@ -18,4 +11,5 @@ RUN chmod +x /scancode-toolkit/amd-plugin.sh;
 RUN cd /scancode-toolkit
 RUN bash -c "/scancode-toolkit/amd-plugin.sh"
 
-CMD ./scancode -clipeu --verbose /scan --processes `expr $(nproc --all) - 1` --json /scan/licenses.json
+CMD scancode  -clpeui  --package --processes `expr $(nproc --all) - 1` --classify --keywordsscan --verbose --full-root --json-pp /artifacts/$(date "+%Y.%m.%d-%H.%M.%S")-licenses.json /src --license-policy scancode-plugins/amd_licence_policy.yml --summary --summary-with-details --license-text --license-text-diagnostics --is-license-text  --license-diag  --no-licenses  --licence-modifications --custom-output /artifacts/$(date "+%Y.%m.%d-%H.%M.%S")-license-modification-report.html --custom-template scancode-plugins/license-modification-template.html >>/logs/$(date "+%Y.%m.%d-%H.%M.%S")-logfile 2>&1
+
