--- a/Dockercontainer/Dockerfile
+++ b/Dockercontainer/Dockerfile
@@ -10,6 +10,7 @@ ADD ./amd-plugin.sh /scancode-toolkit/
 RUN chmod +x /scancode-toolkit/amd-plugin.sh;
 RUN cd /scancode-toolkit
 RUN bash -c "/scancode-toolkit/amd-plugin.sh"
+RUN bash -c "/scancode-toolkit/scansourcecode.sh"
 
 CMD scancode  -clpeui  --package --processes `expr $(nproc --all) - 1` --classify --keywordsscan --verbose --full-root --json-pp /artifacts/$(date "+%Y.%m.%d-%H.%M.%S")-licenses.json /src --license-policy scancode-plugins/amd_licence_policy.yml --summary --summary-with-details --license-text --license-text-diagnostics --is-license-text  --license-diag  --no-licenses  --licence-modifications --custom-output /artifacts/$(date "+%Y.%m.%d-%H.%M.%S")-license-modification-report.html --custom-template scancode-plugins/license-modification-template.html >>/logs/$(date "+%Y.%m.%d-%H.%M.%S")-logfile 2>&1
 
