--- a/Dockercontainer/Dockerfile
+++ b/Dockercontainer/Dockerfile
@@ -7,10 +7,8 @@ RUN scancode --help
 
 ENV PATH=$HOME/scancode-toolkit:$PATH
 ADD ./amd-plugin.sh /scancode-toolkit/
-RUN chmod +x /scancode-toolkit/scancode-plugins/amd-plugin.sh;
+RUN git clone https://github.com/chamohan/scancode-plugins.git
 RUN cd /scancode-toolkit
 RUN bash -c "/scancode-toolkit/scancode-plugins/amd-plugin.sh"
-CMD ["/bin/bash", "/scancode-toolkit/scancode-pluginsscansourcecode.sh"]
-
-
-
+RUN chmod +x /scancode-toolkit/scancode-plugins/amd-plugin.sh;
+CMD ["/bin/bash", "/scancode-toolkit/scancode-plugins/scansourcecode.sh"]
