changes made in cfg files to generate wheel

--- a/Containers/Docker/amd-scancode/scancode-keywords-scan/MANIFEST.in
+++ b/Containers/Docker/amd-scancode/scancode-keywords-scan/MANIFEST.in
@@ -1,7 +1,7 @@
 graft src
 
 include setup.py
-imclude setup.cfg
+include setup.cfg
 include MANIFEST.in
 include NOTICE
 include apache-2.0.LICENSE
