--- a/Containers/Docker/amd-scancode/scancode-no-licenses/setup.cfg
+++ b/Containers/Docker/amd-scancode/scancode-no-licenses/setup.cfg
@@ -4,5 +4,11 @@ license_file = NOTICE
 [bdist_wheel]
 universal = 1
 
+[bdist_rpm]
+release = 1
+packager = <chmohan@amd.com>
+
 [aliases]
 release = clean --all  bdist_wheel
+
+
