--- a/plugins/scancode-scancache/MANIFEST.in
+++ b/plugins/scancode-scancache/MANIFEST.in
@@ -3,5 +3,7 @@ graft src
 include setup.py
 include setup.cfg
 include MANIFEST.in
+include NOTICE
+include apache-2.0.LICENSE
 
 global-exclude *.py[co] __pycache__ *.*~
